Finish all endpoints
