# Sources/Vehicle/Domain/Entities/Payment.swift
@@ -1,0 +1,12 @@
+import Foundation
+
+struct Payment {
+    let paymentId: UUID
+    let status: PaymentStatus
+    let receivedAt: Date
+}
+
+enum PaymentStatus: String {
+    case paid = "PAID"
+    case cancelled = "CANCELLED"
+}
