# Sources/Webhook/Interfaces/HTTP/DTOs/ErrorResponse.swift
@@ -1,0 +1,6 @@
+import Foundation
+import Vapor
+
+struct ErrorResponse: Content {
+    let message: String
+}
